Fusion ACE complet

--- a/3362815204/localisation/Flavour_Leslinpar_loc_l_english.yml
+++ b/3362815204/localisation/Flavour_Leslinpar_loc_l_english.yml
@@ -139,7 +139,7 @@ A92_gardens_leslinpar_tooltip: "§TIf prestige is at least 50§!"
 A92_everyone_must_serve_tooltip: "\nIf we are rivals with the §YEmperor§! or have a bigger army than the §YEmperor§!."
 A92_half_elven_administration_tooltip: "\nWhen we fully own §YSouth Ibevar§! or §YNorth Ibevar§! areas, we will form a §YBrother-Stratocracy Realm§! in the owned areas."
 A92_rise_leslinpar_tooltip2: "§RWe won't be able to form Esmaria§!."
-flavor_Leslinpar.17.tt: "Our non §YPárian§! provinces will slowly §Gconvert§! to §YPárian§! culture."
+flavor_leslinpar.17.tt: "Our non §YPárian§! provinces will slowly §Gconvert§! to §YPárian§! culture."
 A92_parian_supremacy_tooltip: "Level §G3§! §YAdvisor§! of each type employed £adm£ £dip£ £mil£"
 A92_a_duchy_reborn_tooltip: "\nIf @B60 §YFarraneán§! is our §YSubject§! and has §G0§! §YLiberty Desire§!."
 A92_ports_tooltip: "If we have the biggest navy in §YCannor§!."
@@ -154,19 +154,19 @@ A92_parian_countryside_tooltip: "Changing culture in a province will give the fo
 A92_parian_cities_tooltip: "Upgrading §YCenters Of Trade§! will gain additional §G1§! £dip£ §GDevelopment§!."
 A92_parian_cities_tooltip2: "\n§G3§! §YProvinces§! fulfilling the requirements will get the following §YModifier§!:"
 A92_northern_coast_tooltip: "Every coastal province will get §G1§! £adm£ §GDevelopment§!."
-flavor_Leslinpar.18.a.tt: "§DWe will unlock the decision to restore Castanor!§!"
-flavor_Leslinpar.18.b.tt: "Every owned province in the §YForlorn vale§! region will get the following §YModifier§!:"
-flavor_Leslinpar.19.b.tt: "Every owned province with a §YFort§! in the §YAlenic Frontier§! region and §YDerwing§! area will get the following §YModifier§!:"
+flavor_leslinpar.18.a.tt: "§DWe will unlock the decision to restore Castanor!§!"
+flavor_leslinpar.18.b.tt: "Every owned province in the §YForlorn vale§! region will get the following §YModifier§!:"
+flavor_leslinpar.19.b.tt: "Every owned province with a §YFort§! in the §YAlenic Frontier§! region and §YDerwing§! area will get the following §YModifier§!:"
 A92_textile_production_tooltip: "\nIf 10 §YCloth§! provinces fulfill the requirements."
 A92_textile_production_tooltip2: "3 Random owned §YGrain§! or §YLivestock§! provinces will turn into §YCloth§!."
-A92_cloth_tt: "5 Random owned §YCloth§! provinces will turn into §YSilk§!."
+A92_cloth_tt: "3 Random owned §YCloth§! provinces will turn into §YSilk§!."
 A92_leslinpar_renaissance_tooltip: "If our §YCapital§! has the most §YDevelopment§! in the §YEmpire§!."
 A92_helf_administration_tooltip: "This will swap us to an §GHalf-elven Administration§!."
-flavor_Leslinpar.1.a.tt: "§GEvery allies loses §G10§! §YTrust§! with us."
+flavor_leslinpar.1.a.tt: "§GEvery allies loses §G10§! §YTrust§! with us."
 A92_parian_countryside_tooltip2: "5 Random provinces will change to §YPárian§! culture."
-flavor_Leslinpar.18.a.tt2: "Gain access to early version of the §GWars of consolidation§! §YCasus Belli§! against neighboring §YEscanni§! nations."
+flavor_leslinpar.18.a.tt2: "Gain access to early version of the §GWars of consolidation§! §YCasus Belli§! against neighboring §YEscanni§! nations."
 A92_a_duchy_reborn_tooltip2: "Gain a permanent claim on the §Ycapitals§! of the §YElectors§! and the §YEmperor§!."
-flavor_Leslinpar.18.a.tt3: "§TUnlock missions about conquest of §YEscann§!§!."
+flavor_leslinpar.18.a.tt3: "§TUnlock missions about conquest of §YEscann§!§!."
 A92_the_forestry_guild_tooltip2: "Every owned §YWoods§! province has a §YProduction§! building."
 
 SABALIA: "Sabalia"
@@ -181,66 +181,66 @@ incident_leslinpar_dictatorship_incident: "Chaos in Leslinpár"
 incident_leslinpar_dictatorship_incident_member_alert: "An unacceptable type of government has risen in Leslinpár, this cannot stand."
 incident_leslinpar_dictatorship_incident_emperor_alert: "An unacceptable type of government has risen in Leslinpár, this cannot stand."
 
-flavor_Leslinpar.500.t: "Chaos in Leslinpár"
-flavor_Leslinpar.500.d: "An unacceptable type of government has risen in Leslinpár, this cannot stand."
-flavor_Leslinpar.500.a: "The emperor must step in and restore order."
-flavor_Leslinpar.500.b: "They can exist, for now."
+flavor_leslinpar.500.t: "Chaos in Leslinpár"
+flavor_leslinpar.500.d: "An unacceptable type of government has risen in Leslinpár, this cannot stand."
+flavor_leslinpar.500.a: "The emperor must step in and restore order."
+flavor_leslinpar.500.b: "They can exist, for now."
 
 #events
 
-flavor_Leslinpar.1.t: "Crisis in Leslinpár"
-flavor_Leslinpar.1.d: "The sudden death of the Duke of Leslinpár has thrown the realm into turmoil, with whispers of assassination spreading like wildfire. The uncertainty surrounding the state of the government has left Leslinpár vulnerable, Varian Sabal, the newly appointed protector of the realm, must now navigate the treacherous waters of succession and political intrigue to ensure the stability of the duchy."
-flavor_Leslinpar.1.a: "Traitors and conspirators must be rooted out."
+flavor_leslinpar.1.t: "Crisis in Leslinpár"
+flavor_leslinpar.1.d: "The sudden death of the Duke of Leslinpár has thrown the realm into turmoil, with whispers of assassination spreading like wildfire. The uncertainty surrounding the state of the government has left Leslinpár vulnerable, Varian Sabal, the newly appointed protector of the realm, must now navigate the treacherous waters of succession and political intrigue to ensure the stability of the duchy."
+flavor_leslinpar.1.a: "Traitors and conspirators must be rooted out."
 
-flavor_Leslinpar.2.t: "The fate of Leslinpár"
-flavor_Leslinpar.2.d: "With the rule somewhat stabilized, Varian Sabal makes the decision to take the reins of power permanently, declaring that the council and nobles of Leslinpár are no longer fit to lead. The people of Leslinpár are divided on the issue, with some seeing Sabal as a savior and others as a tyrant. The future of Leslinpár is uncertain, but one thing is clear: change is coming."
-flavor_Leslinpar.2.a: "Varian will bring order to Esmaria."
+flavor_leslinpar.2.t: "The fate of Leslinpár"
+flavor_leslinpar.2.d: "With the rule somewhat stabilized, Varian Sabal makes the decision to take the reins of power permanently, declaring that the council and nobles of Leslinpár are no longer fit to lead. The people of Leslinpár are divided on the issue, with some seeing Sabal as a savior and others as a tyrant. The future of Leslinpár is uncertain, but one thing is clear: change is coming."
+flavor_leslinpar.2.a: "Varian will bring order to Esmaria."
 
-flavor_Leslinpar.5.t: "Stabilize the realm."
-flavor_Leslinpar.5.d: "The populace is divided between various factions that want to see Leslinpár go in different directions. The council and the nobles are at each other's throats, and the people are starting to lose faith in the government. It's time for Sabal to take action and stabilize the realm, no matter what he chooses to do, the factions will not be happy."
-flavor_Leslinpar.5.a: "We must stand together"
-flavor_Leslinpar.5.b: "Varian's rule is the only way to stabilize the realm."
+flavor_leslinpar.5.t: "Stabilize the realm."
+flavor_leslinpar.5.d: "The populace is divided between various factions that want to see Leslinpár go in different directions. The council and the nobles are at each other's throats, and the people are starting to lose faith in the government. It's time for Sabal to take action and stabilize the realm, no matter what he chooses to do, the factions will not be happy."
+flavor_leslinpar.5.a: "We must stand together"
+flavor_leslinpar.5.b: "Varian's rule is the only way to stabilize the realm."
 
-flavor_Leslinpar.6.t: "Look outwards"
-flavor_Leslinpar.6.d: "During the crisis, our relations with our allies have been strained. It's time for Sabal to look outwards and see what he can do to improve our relations with our allies."
-flavor_Leslinpar.6.a: "we must reach out to our allies."
-flavor_Leslinpar.6.b: "Leslinpár must stand alone."
+flavor_leslinpar.6.t: "Look outwards"
+flavor_leslinpar.6.d: "During the crisis, our relations with our allies have been strained. It's time for Sabal to look outwards and see what he can do to improve our relations with our allies."
+flavor_leslinpar.6.a: "we must reach out to our allies."
+flavor_leslinpar.6.b: "Leslinpár must stand alone."
 
-flavor_Leslinpar.7.t: "Deserters and traitors"
-flavor_Leslinpar.7.d: "With the state of the realm, Sabal can't afford to trust anyone. The army is full of deserters and possible spies and traitors that have been working against the realm. It's time for Sabal to take action."
-flavor_Leslinpar.7.a: "Don't do anything drastic."
-flavor_Leslinpar.7.b: "Purge the army."
+flavor_leslinpar.7.t: "Deserters and traitors"
+flavor_leslinpar.7.d: "With the state of the realm, Sabal can't afford to trust anyone. The army is full of deserters and possible spies and traitors that have been working against the realm. It's time for Sabal to take action."
+flavor_leslinpar.7.a: "Don't do anything drastic."
+flavor_leslinpar.7.b: "Purge the army."
 
-flavor_Leslinpar.11.t: "The death of the Duke"
-flavor_Leslinpar.11.d: "The Duke has been found dead! His sudden and mysterious demise has plunged the realm into chaos, as the weak council and bickering nobles descend into squabbles over the succession. Amid this turmoil, Varian Sabal, a trusted confidant of the late Duke and a seasoned leader, takes decisive action. Recognizing the danger posed by the infighting and corruption of those who claim to lead, he seizes power and declares himself Protector of the Realm. Varian is determined to steer Leslinpár through these dark times, knowing full well that leaving the realm in the hands of self-serving nobles and ineffectual councils would spell its doom."
-flavor_Leslinpar.11.a: "Varian Sabal will lead Leslinpár into the future."
+flavor_leslinpar.11.t: "The death of the Duke"
+flavor_leslinpar.11.d: "The Duke has been found dead! His sudden and mysterious demise has plunged the realm into chaos, as the weak council and bickering nobles descend into squabbles over the succession. Amid this turmoil, Varian Sabal, a trusted confidant of the late Duke and a seasoned leader, takes decisive action. Recognizing the danger posed by the infighting and corruption of those who claim to lead, he seizes power and declares himself Protector of the Realm. Varian is determined to steer Leslinpár through these dark times, knowing full well that leaving the realm in the hands of self-serving nobles and ineffectual councils would spell its doom."
+flavor_leslinpar.11.a: "Varian Sabal will lead Leslinpár into the future."
 
-flavor_Leslinpar.13.t: "A new capital?"
-flavor_Leslinpar.13.d: "With the conquest of Esmarainé, the most influential city in Esmaria and namesake of the late Esmari dynasty. There are a few voices in the court that suggest that Leslinpár should move its capital to Esmarainé."
-flavor_Leslinpar.13.a: "We should move the capital to Esmarainé."
-flavor_Leslinpar.13.b: "I hear the Lake Palace is nice."
-flavor_Leslinpar.13.c: "We should keep our current capital."
+flavor_leslinpar.13.t: "A new capital?"
+flavor_leslinpar.13.d: "With the conquest of Esmarainé, the most influential city in Esmaria and namesake of the late Esmari dynasty. There are a few voices in the court that suggest that Leslinpár should move its capital to Esmarainé."
+flavor_leslinpar.13.a: "We should move the capital to Esmarainé."
+flavor_leslinpar.13.b: "I hear the Lake Palace is nice."
+flavor_leslinpar.13.c: "We should keep our current capital."
 
-flavor_Leslinpar.14.t: "Stratocracy of Farraneán"
-flavor_Leslinpar.14.d: "The kingdom of Farraneán has been a realm for many half elves for centuries, and with the Greentide many of them have fled to Esmaria. now with the conquest of the Ibevarian woods and the teachings of Sabal, we can reform the realm of Farraneán in Ibevar."
-flavor_Leslinpar.14.a: "Welcome brothers."
+flavor_leslinpar.14.t: "Stratocracy of Farraneán"
+flavor_leslinpar.14.d: "The kingdom of Farraneán has been a realm for many half elves for centuries, and with the Greentide many of them have fled to Esmaria. now with the conquest of the Ibevarian woods and the teachings of Sabal, we can reform the realm of Farraneán in Ibevar."
+flavor_leslinpar.14.a: "Welcome brothers."
 
-flavor_Leslinpar.16.t: "Rise of Pária"
-flavor_Leslinpar.16.d: "We are no longer the realm we once were. Under Sabal's transformative leadership, Leslinpár has risen as a military powerhouse. With the ascent of the Párian identity, our people now call for a change—a name that reflects our newfound strength and unity, a name befitting the realm we have become."
-flavor_Leslinpar.16.a: "We are Pária."
-flavor_Leslinpar.16.b: "Sabalia, to honor the person who made it all possible."
-flavor_Leslinpar.16.c: "Páriande, to showcase our Elven heritage."
-flavor_Leslinpar.16.f: "Párianor, after the imperial might of Castanor."
+flavor_leslinpar.16.t: "Rise of Pária"
+flavor_leslinpar.16.d: "We are no longer the realm we once were. Under Sabal's transformative leadership, Leslinpár has risen as a military powerhouse. With the ascent of the Párian identity, our people now call for a change—a name that reflects our newfound strength and unity, a name befitting the realm we have become."
+flavor_leslinpar.16.a: "We are Pária."
+flavor_leslinpar.16.b: "Sabalia, to honor the person who made it all possible."
+flavor_leslinpar.16.c: "Páriande, to showcase our Elven heritage."
+flavor_leslinpar.16.f: "Párianor, after the imperial might of Castanor."
 
-flavor_Leslinpar.18.t: "The eastern question."
-flavor_Leslinpar.18.d: "With the conquest of Ibevar and the Forlorn vale, we have secured a gateway into war-torn lands of Escann. Some of our advisors claim that these lands can act as a buffer zone between us and the eastern realms, while others think that we should expand further into Escann."
-flavor_Leslinpar.18.a: "We should expand into Escann."
-flavor_Leslinpar.18.b: "Lets focus on our current lands."
+flavor_leslinpar.18.t: "The eastern question."
+flavor_leslinpar.18.d: "With the conquest of Ibevar and the Forlorn vale, we have secured a gateway into war-torn lands of Escann. Some of our advisors claim that these lands can act as a buffer zone between us and the eastern realms, while others think that we should expand further into Escann."
+flavor_leslinpar.18.a: "We should expand into Escann."
+flavor_leslinpar.18.b: "Lets focus on our current lands."
 
-flavor_Leslinpar.19.t: "The northern question."
-flavor_Leslinpar.19.d: "With the conquest of the Arbaran, we have secured a gateway into the northern lands of the Alenic Frontier. Some of our advisors claim that these lands can act as a buffer zone between us and the Gawedi, while others think that we should expand further into the north."
-flavor_Leslinpar.19.a: "We should expand into the north."
-flavor_Leslinpar.19.b: "Secure a bulwark against the Gawedi."
+flavor_leslinpar.19.t: "The northern question."
+flavor_leslinpar.19.d: "With the conquest of the Arbaran, we have secured a gateway into the northern lands of the Alenic Frontier. Some of our advisors claim that these lands can act as a buffer zone between us and the Gawedi, while others think that we should expand further into the north."
+flavor_leslinpar.19.a: "We should expand into the north."
+flavor_leslinpar.19.b: "Secure a bulwark against the Gawedi."
 
 leslinpar_succession_crisis: "Párian Succession Crisis"
 leslinpar_disaster_done: "The Párian Succession Crisis has ended."
