--- a/3362815204/localisation/Flavour_Leslinpar_loc_l_french.yml
+++ b/3362815204/localisation/Flavour_Leslinpar_loc_l_french.yml
@@ -139,7 +139,7 @@ A92_gardens_leslinpar_tooltip: "§TSi le prestige est d'au moins 50§!"
 A92_everyone_must_serve_tooltip: "\nSi nous sommes rivaux avec l'§YEmpereur§! ou avons une plus grande armée que l'§YEmpereur§!."
 A92_half_elven_administration_tooltip: "\nQuand nous possédons entièrement les zones §YSud Ibevar§! ou §YNord Ibevar§!, nous formerons un §YRoyaume Stratocratie-Frère§! dans les zones possédées."
 A92_rise_leslinpar_tooltip2: "§RNous ne pourrons pas former l'Esmarie§!."
-flavor_Leslinpar.17.tt: "Nos provinces non §YPáriennes§! se §Gconvertiront§! lentement à la culture §YPárienne§!."
+flavor_leslinpar.17.tt: "Nos provinces non §YPáriennes§! se §Gconvertiront§! lentement à la culture §YPárienne§!."
 A92_parian_supremacy_tooltip: "§YConseiller§! de niveau §G3§! de chaque type employé £adm£ £dip£ £mil£"
 A92_a_duchy_reborn_tooltip: "\nSi @B60 §YFarraneán§! est notre §YSujet§! et a §G0§! de §YDésir de Liberté§!."
 A92_ports_tooltip: "Si nous avons la plus grande marine en §YCannor§!."
@@ -154,19 +154,19 @@ A92_parian_countryside_tooltip: "Changer la culture dans une province donnera le
 A92_parian_cities_tooltip: "Améliorer les §YCentres de Commerce§! gagnera §G1§! §GDéveloppement§! £dip£ supplémentaire."
 A92_parian_cities_tooltip2: "\n§G3§! §YProvinces§! remplissant les exigences obtiendront le §YModificateur§! suivant :"
 A92_northern_coast_tooltip: "Chaque province côtière obtiendra §G1§! de §GDéveloppement§! £adm£."
-flavor_Leslinpar.18.a.tt: "§DNous débloquerons la décision de restaurer Castenor !§!"
-flavor_Leslinpar.18.b.tt: "Chaque province possédée dans la région §YVal Abandonné§! obtiendra le §YModificateur§! suivant :"
-flavor_Leslinpar.19.b.tt: "Chaque province possédée avec un §YFort§! dans la région §YFrontière Alénique§! et la zone §YDerwing§! obtiendra le §YModificateur§! suivant :"
+flavor_leslinpar.18.a.tt: "§DNous débloquerons la décision de restaurer Castenor !§!"
+flavor_leslinpar.18.b.tt: "Chaque province possédée dans la région §YVal Abandonné§! obtiendra le §YModificateur§! suivant :"
+flavor_leslinpar.19.b.tt: "Chaque province possédée avec un §YFort§! dans la région §YFrontière Alénique§! et la zone §YDerwing§! obtiendra le §YModificateur§! suivant :"
 A92_textile_production_tooltip: "\nSi 10 provinces de §YTissu§! remplissent les exigences."
 A92_textile_production_tooltip2: "3 Provinces possédées aléatoirement de §YGrain§! ou §YBétail§! se transformeront en §YTissu§!."
 A92_cloth_tt: "5 Provinces possédées aléatoirement de §YTissu§! se transformeront en §YSoie§!."
 A92_leslinpar_renaissance_tooltip: "Si notre §YCapitale§! a le plus de §YDéveloppement§! dans l'§YEmpire§!."
 A92_helf_administration_tooltip: "Ceci nous fera passer à une §GAdministration Demi-Elfique§!."
-flavor_Leslinpar.1.a.tt: "§GChaque allié perd §G10§! de §YConfiance§! avec nous."
+flavor_leslinpar.1.a.tt: "§GChaque allié perd §G10§! de §YConfiance§! avec nous."
 A92_parian_countryside_tooltip2: "5 Provinces aléatoires changeront vers la culture §YPárienne§!."
-flavor_Leslinpar.18.a.tt2: "Gagne accès à la version précoce du §YCasus Belli§! §GGuerres de consolidation§! contre les nations §YEscanniennes§! voisines."
+flavor_leslinpar.18.a.tt2: "Gagne accès à la version précoce du §YCasus Belli§! §GGuerres de consolidation§! contre les nations §YEscanniennes§! voisines."
 A92_a_duchy_reborn_tooltip2: "Gagne une revendication permanente sur les §Ycapitales§! des §YÉlecteurs§! et de l'§YEmpereur§!."
-flavor_Leslinpar.18.a.tt3: "§TDébloque des missions sur la conquête d'§YEscann§!§!."
+flavor_leslinpar.18.a.tt3: "§TDébloque des missions sur la conquête d'§YEscann§!§!."
 A92_the_forestry_guild_tooltip2: "Chaque province de §YBois§! possédée a un bâtiment de §YProduction§!."
 
 SABALIA: "Sabalie"
@@ -181,66 +181,66 @@ incident_leslinpar_dictatorship_incident: "Chaos à Leslinpár"
 incident_leslinpar_dictatorship_incident_member_alert: "Un type de gouvernement inacceptable s'est élevé à Leslinpár, ceci ne peut pas tenir."
 incident_leslinpar_dictatorship_incident_emperor_alert: "Un type de gouvernement inacceptable s'est élevé à Leslinpár, ceci ne peut pas tenir."
 
-flavor_Leslinpar.500.t: "Chaos à Leslinpár"
-flavor_Leslinpar.500.d: "Un type de gouvernement inacceptable s'est élevé à Leslinpár, ceci ne peut pas tenir."
-flavor_Leslinpar.500.a: "L'empereur doit intervenir et restaurer l'ordre."
-flavor_Leslinpar.500.b: "Ils peuvent exister, pour l'instant."
+flavor_leslinpar.500.t: "Chaos à Leslinpár"
+flavor_leslinpar.500.d: "Un type de gouvernement inacceptable s'est élevé à Leslinpár, ceci ne peut pas tenir."
+flavor_leslinpar.500.a: "L'empereur doit intervenir et restaurer l'ordre."
+flavor_leslinpar.500.b: "Ils peuvent exister, pour l'instant."
 
 #events
 
-flavor_Leslinpar.1.t: "Crise à Leslinpár"
-flavor_Leslinpar.1.d: "La mort soudaine du Duc de Leslinpár a jeté le royaume dans la tourmente, avec des murmures d'assassinat se répandant comme un feu de forêt. L'incertitude entourant l'état du gouvernement a laissé Leslinpár vulnérable. Varian Sabal, le protecteur du royaume nouvellement nommé, doit maintenant naviguer les eaux traîtresses de la succession et de l'intrigue politique pour assurer la stabilité du duché."
-flavor_Leslinpar.1.a: "Les traîtres et conspirateurs doivent être déracinés."
+flavor_leslinpar.1.t: "Crise à Leslinpár"
+flavor_leslinpar.1.d: "La mort soudaine du Duc de Leslinpár a jeté le royaume dans la tourmente, avec des murmures d'assassinat se répandant comme un feu de forêt. L'incertitude entourant l'état du gouvernement a laissé Leslinpár vulnérable. Varian Sabal, le protecteur du royaume nouvellement nommé, doit maintenant naviguer les eaux traîtresses de la succession et de l'intrigue politique pour assurer la stabilité du duché."
+flavor_leslinpar.1.a: "Les traîtres et conspirateurs doivent être déracinés."
 
-flavor_Leslinpar.2.t: "Le Destin de Leslinpár"
-flavor_Leslinpar.2.d: "Avec le règne quelque peu stabilisé, Varian Sabal prend la décision de prendre les rênes du pouvoir de manière permanente, déclarant que le conseil et les nobles de Leslinpár ne sont plus aptes à diriger. Le peuple de Leslinpár est divisé sur la question, certains voyant Sabal comme un sauveur et d'autres comme un tyran. L'avenir de Leslinpár est incertain, mais une chose est claire : le changement arrive."
-flavor_Leslinpar.2.a: "Varian apportera l'ordre à l'Esmarie."
+flavor_leslinpar.2.t: "Le Destin de Leslinpár"
+flavor_leslinpar.2.d: "Avec le règne quelque peu stabilisé, Varian Sabal prend la décision de prendre les rênes du pouvoir de manière permanente, déclarant que le conseil et les nobles de Leslinpár ne sont plus aptes à diriger. Le peuple de Leslinpár est divisé sur la question, certains voyant Sabal comme un sauveur et d'autres comme un tyran. L'avenir de Leslinpár est incertain, mais une chose est claire : le changement arrive."
+flavor_leslinpar.2.a: "Varian apportera l'ordre à l'Esmarie."
 
-flavor_Leslinpar.5.t: "Stabiliser le Royaume"
-flavor_Leslinpar.5.d: "La population est divisée entre diverses factions qui veulent voir Leslinpár aller dans différentes directions. Le conseil et les nobles se disputent, et le peuple commence à perdre foi dans le gouvernement. Il est temps pour Sabal d'agir et de stabiliser le royaume. Peu importe ce qu'il choisit de faire, les factions ne seront pas heureuses."
-flavor_Leslinpar.5.a: "Nous devons rester unis"
-flavor_Leslinpar.5.b: "Le règne de Varian est la seule façon de stabiliser le royaume."
+flavor_leslinpar.5.t: "Stabiliser le Royaume"
+flavor_leslinpar.5.d: "La population est divisée entre diverses factions qui veulent voir Leslinpár aller dans différentes directions. Le conseil et les nobles se disputent, et le peuple commence à perdre foi dans le gouvernement. Il est temps pour Sabal d'agir et de stabiliser le royaume. Peu importe ce qu'il choisit de faire, les factions ne seront pas heureuses."
+flavor_leslinpar.5.a: "Nous devons rester unis"
+flavor_leslinpar.5.b: "Le règne de Varian est la seule façon de stabiliser le royaume."
 
-flavor_Leslinpar.6.t: "Regarder vers l'Extérieur"
-flavor_Leslinpar.6.d: "Pendant la crise, nos relations avec nos alliés ont été tendues. Il est temps pour Sabal de regarder vers l'extérieur et voir ce qu'il peut faire pour améliorer nos relations avec nos alliés."
-flavor_Leslinpar.6.a: "Nous devons tendre la main à nos alliés."
-flavor_Leslinpar.6.b: "Leslinpár doit se tenir seul."
+flavor_leslinpar.6.t: "Regarder vers l'Extérieur"
+flavor_leslinpar.6.d: "Pendant la crise, nos relations avec nos alliés ont été tendues. Il est temps pour Sabal de regarder vers l'extérieur et voir ce qu'il peut faire pour améliorer nos relations avec nos alliés."
+flavor_leslinpar.6.a: "Nous devons tendre la main à nos alliés."
+flavor_leslinpar.6.b: "Leslinpár doit se tenir seul."
 
-flavor_Leslinpar.7.t: "Déserteurs et Traîtres"
-flavor_Leslinpar.7.d: "Avec l'état du royaume, Sabal ne peut se permettre de faire confiance à personne. L'armée est pleine de déserteurs et d'espions et traîtres possibles qui ont travaillé contre le royaume. Il est temps pour Sabal d'agir."
-flavor_Leslinpar.7.a: "Ne rien faire de drastique."
-flavor_Leslinpar.7.b: "Purger l'armée."
+flavor_leslinpar.7.t: "Déserteurs et Traîtres"
+flavor_leslinpar.7.d: "Avec l'état du royaume, Sabal ne peut se permettre de faire confiance à personne. L'armée est pleine de déserteurs et d'espions et traîtres possibles qui ont travaillé contre le royaume. Il est temps pour Sabal d'agir."
+flavor_leslinpar.7.a: "Ne rien faire de drastique."
+flavor_leslinpar.7.b: "Purger l'armée."
 
-flavor_Leslinpar.11.t: "La Mort du Duc"
-flavor_Leslinpar.11.d: "Le Duc a été trouvé mort ! Sa disparition soudaine et mystérieuse a plongé le royaume dans le chaos, alors que le conseil faible et les nobles querelleurs descendent dans des querelles sur la succession. Au milieu de ce tumulte, Varian Sabal, un confident de confiance du feu Duc et un leader expérimenté, prend une action décisive. Reconnaissant le danger posé par les disputes et la corruption de ceux qui prétendent diriger, il saisit le pouvoir et se déclare Protecteur du Royaume. Varian est déterminé à diriger Leslinpár à travers ces temps sombres, sachant très bien que laisser le royaume entre les mains de nobles égoïstes et de conseils inefficaces signifierait sa perte."
-flavor_Leslinpar.11.a: "Varian Sabal mènera Leslinpár vers l'avenir."
+flavor_leslinpar.11.t: "La Mort du Duc"
+flavor_leslinpar.11.d: "Le Duc a été trouvé mort ! Sa disparition soudaine et mystérieuse a plongé le royaume dans le chaos, alors que le conseil faible et les nobles querelleurs descendent dans des querelles sur la succession. Au milieu de ce tumulte, Varian Sabal, un confident de confiance du feu Duc et un leader expérimenté, prend une action décisive. Reconnaissant le danger posé par les disputes et la corruption de ceux qui prétendent diriger, il saisit le pouvoir et se déclare Protecteur du Royaume. Varian est déterminé à diriger Leslinpár à travers ces temps sombres, sachant très bien que laisser le royaume entre les mains de nobles égoïstes et de conseils inefficaces signifierait sa perte."
+flavor_leslinpar.11.a: "Varian Sabal mènera Leslinpár vers l'avenir."
 
-flavor_Leslinpar.13.t: "Une Nouvelle Capitale ?"
-flavor_Leslinpar.13.d: "Avec la conquête d'Esmarainé, la cité la plus influente d'Esmarie et homonyme de la défunte dynastie esmarienne, il y a quelques voix à la cour qui suggèrent que Leslinpár devrait déplacer sa capitale à Esmarainé."
-flavor_Leslinpar.13.a: "Nous devrions déplacer la capitale à Esmarainé."
-flavor_Leslinpar.13.b: "J'entends dire que le Palais du Lac est agréable."
-flavor_Leslinpar.13.c: "Nous devrions garder notre capitale actuelle."
+flavor_leslinpar.13.t: "Une Nouvelle Capitale ?"
+flavor_leslinpar.13.d: "Avec la conquête d'Esmarainé, la cité la plus influente d'Esmarie et homonyme de la défunte dynastie esmarienne, il y a quelques voix à la cour qui suggèrent que Leslinpár devrait déplacer sa capitale à Esmarainé."
+flavor_leslinpar.13.a: "Nous devrions déplacer la capitale à Esmarainé."
+flavor_leslinpar.13.b: "J'entends dire que le Palais du Lac est agréable."
+flavor_leslinpar.13.c: "Nous devrions garder notre capitale actuelle."
 
-flavor_Leslinpar.14.t: "Stratocratie de Farraneán"
-flavor_Leslinpar.14.d: "Le royaume de Farraneán a été un royaume pour beaucoup de demi-elfes pendant des siècles, et avec la Marée Verte beaucoup d'entre eux ont fui vers l'Esmarie. Maintenant avec la conquête des bois ibévariens et les enseignements de Sabal, nous pouvons réformer le royaume de Farraneán en Ibevar."
-flavor_Leslinpar.14.a: "Accueillons nos frères."
+flavor_leslinpar.14.t: "Stratocratie de Farraneán"
+flavor_leslinpar.14.d: "Le royaume de Farraneán a été un royaume pour beaucoup de demi-elfes pendant des siècles, et avec la Marée Verte beaucoup d'entre eux ont fui vers l'Esmarie. Maintenant avec la conquête des bois ibévariens et les enseignements de Sabal, nous pouvons réformer le royaume de Farraneán en Ibevar."
+flavor_leslinpar.14.a: "Accueillons nos frères."
 
-flavor_Leslinpar.16.t: "Ascension de la Párie"
-flavor_Leslinpar.16.d: "Nous ne sommes plus le royaume que nous étions autrefois. Sous le leadership transformateur de Sabal, Leslinpár s'est élevé comme une puissance militaire. Avec l'ascension de l'identité párienne, notre peuple demande maintenant un changement, un nom qui reflète notre force et unité retrouvées, un nom digne du royaume que nous sommes devenus."
-flavor_Leslinpar.16.a: "Nous sommes la Párie."
-flavor_Leslinpar.16.b: "Sabalie, pour honorer la personne qui a tout rendu possible."
-flavor_Leslinpar.16.c: "Páriande, pour montrer notre héritage elfique."
-flavor_Leslinpar.16.f: "Párianor, d'après la puissance impériale de Castenor."
+flavor_leslinpar.16.t: "Ascension de la Párie"
+flavor_leslinpar.16.d: "Nous ne sommes plus le royaume que nous étions autrefois. Sous le leadership transformateur de Sabal, Leslinpár s'est élevé comme une puissance militaire. Avec l'ascension de l'identité párienne, notre peuple demande maintenant un changement, un nom qui reflète notre force et unité retrouvées, un nom digne du royaume que nous sommes devenus."
+flavor_leslinpar.16.a: "Nous sommes la Párie."
+flavor_leslinpar.16.b: "Sabalie, pour honorer la personne qui a tout rendu possible."
+flavor_leslinpar.16.c: "Páriande, pour montrer notre héritage elfique."
+flavor_leslinpar.16.f: "Párianor, d'après la puissance impériale de Castenor."
 
-flavor_Leslinpar.18.t: "La Question Orientale"
-flavor_Leslinpar.18.d: "Avec la conquête d'Ibevar et du Val Abandonné, nous avons sécurisé une porte d'entrée vers les terres déchirées par la guerre d'Escann. Certains de nos conseillers prétendent que ces terres peuvent agir comme une zone tampon entre nous et les royaumes orientaux, tandis que d'autres pensent que nous devrions nous étendre plus loin en Escann."
-flavor_Leslinpar.18.a: "Nous devrions nous étendre en Escann."
-flavor_Leslinpar.18.b: "Concentrons-nous sur nos terres actuelles."
+flavor_leslinpar.18.t: "La Question Orientale"
+flavor_leslinpar.18.d: "Avec la conquête d'Ibevar et du Val Abandonné, nous avons sécurisé une porte d'entrée vers les terres déchirées par la guerre d'Escann. Certains de nos conseillers prétendent que ces terres peuvent agir comme une zone tampon entre nous et les royaumes orientaux, tandis que d'autres pensent que nous devrions nous étendre plus loin en Escann."
+flavor_leslinpar.18.a: "Nous devrions nous étendre en Escann."
+flavor_leslinpar.18.b: "Concentrons-nous sur nos terres actuelles."
 
-flavor_Leslinpar.19.t: "La Question du Nord"
-flavor_Leslinpar.19.d: "Avec la conquête d'Arbaran, nous avons sécurisé une porte d'entrée vers les terres du nord de la Frontière Alénique. Certains de nos conseillers prétendent que ces terres peuvent agir comme une zone tampon entre nous et les Gawedi, tandis que d'autres pensent que nous devrions nous étendre plus loin vers le nord."
-flavor_Leslinpar.19.a: "Nous devrions nous étendre vers le nord."
-flavor_Leslinpar.19.b: "Sécuriser un rempart contre les Gawedi."
+flavor_leslinpar.19.t: "La Question du Nord"
+flavor_leslinpar.19.d: "Avec la conquête d'Arbaran, nous avons sécurisé une porte d'entrée vers les terres du nord de la Frontière Alénique. Certains de nos conseillers prétendent que ces terres peuvent agir comme une zone tampon entre nous et les Gawedi, tandis que d'autres pensent que nous devrions nous étendre plus loin vers le nord."
+flavor_leslinpar.19.a: "Nous devrions nous étendre vers le nord."
+flavor_leslinpar.19.b: "Sécuriser un rempart contre les Gawedi."
 
 leslinpar_succession_crisis: "Crise de Succession Párienne"
 leslinpar_disaster_done: "La Crise de Succession Párienne s'est terminée."
