--- a/3362815204/localisation/Flavour_Nathalaire_A74_l_french.yml
+++ b/3362815204/localisation/Flavour_Nathalaire_A74_l_french.yml
@@ -1,16 +1,171 @@
 ﻿l_french:
- nathalaire_expel_goblins_title:0 "Expulser les Gobelins"
- nathalaire_expel_goblins_desc:0 "Nous devons subjuguer ces gobelins et les contraindre à se plier sous l'autorité de notre noble cité !"
- nathalaire_reclaim_dalavans_folly_title:0 "Reconquérir la Folie de Daravan"
- nathalaire_reclaim_dalavans_folly_desc:0 "La Folie de Daravan est restée inoccupée bien trop longtemps. Nous devons reprendre et reconstruire ces terres délaissées pour restaurer leur ancienne splendeur."
- nathalaire_seize_the_gem_isle_title:0 "S'emparer de l'Île aux Gemmes"
- nathalaire_seize_the_gem_isle_desc:0 "L'Île aux Gemmes est une île précieuse au sens littéral du terme - facile à défendre et abritant l'une des plus vastes mines de gemmes de la région. Il serait des plus avisés de nous en emparer."
- nathalaire_a_second_home_title:0 "Un Second Foyer"
- nathalaire_a_second_home_desc:0 "Nous devons faire de l'Île aux Gemmes une véritable cité qui pourra devenir un centre de prospérité sous l'égide de Nathalaire."
- a_trifectomy_of_citys_title:0 "Une Trifection de Cités"
- a_trifectomy_of_citys_desc:0 "Eborthíl est un port d'importance stratégique qui ne demande qu'à être rançonné et placé sous notre domination."
- 
- nathalaire_resettlement_of_goblins:0 "Réinstallation Gobeline"
- nathalaire_gems_of_the_gem_isle:0 "Gemmes de l'Île aux Gemmes"
- nathalaire_seizing_of_assets:0 "Saisie des Biens"
- pirate_legacy:0 "L'Héritage d'un Pirate"
+ A74_prepare_expedition_title:0 "Préparer une expédition"
+ A74_prepare_expedition_desc:0 ""
+ A74_coastal_reclaimation_title:0 "Recouvrement côtier"
+ A74_coastal_reclaimation_desc:0 ""
+ A74_protect_border_title:0 "Protéger la frontière impériale"
+ A74_protect_border_desc:0 ""
+ A74_restore_coast_title:0 "Restaurer la côte"
+ A74_restore_coast_desc:0 ""
+ A74_black_hull_shipyards_title:0 "Chantier naval à coque noire"
+ A74_black_hull_shipyards_desc:0 ""
+ A74_control_the_trade_title:0 "Contrôler le commerce"
+ A74_control_the_trade_desc:0 ""
+ A74_blood_bay_title:0 "Baie sanglante"
+ A74_blood_bay_desc:0 ""
+ A74_drown_elf_title:0 "Noyer les elfes des mers"
+ A74_drown_elf_desc:0 ""
+ A74_skin_the_bear_title:0 "Écorcher l'ours"
+ A74_skin_the_bear_desc:0 ""
+ A74_our_lady_title:0 "Notre-Dame des Ombres"
+ A74_our_lady_desc:0 ""
+ A74_shadows_embrace_title:0 "L'étreinte des ombres"
+ A74_shadows_embrace_desc:0 ""
+ A74_deal_devil_title:0 "Pactiser avec les démons"
+ A74_deal_devil_desc:0 ""
+ A74_an_infernal_shield_title:0 "Un bouclier infernal"
+ A74_an_infernal_shield_desc:0 ""
+ A74_green_trade_title:0 "Le commerce vert"
+ A74_green_trade_desc:0 ""
+ A74_to_prove_oneself_title:0 "Faire ses preuves"
+ A74_to_prove_oneself_desc:0 ""
+ A74_only_one_title:0 "Il ne peut en rester qu'un"
+ A74_only_one_desc:0 ""
+ A74_biggest_city_title:0 "La plus grande des petites villes"
+ A74_biggest_city_desc:0 ""
+ A74_show_them_title:0 "Montrer comment faire"
+ A74_show_them_desc:0 ""
+ A74_divenhal_menance_title:0 "Menace de Divenhal"
+ A74_divenhal_menance_desc:0 ""
+ A74_dread_mutiny_title:0 "Au-delà de nos côtes"
+ A74_dread_mutiny_desc:0 ""
+ A74_prepare_fleet_title:0 "Hisser les voiles noires"
+ A74_prepare_fleet_desc:0 ""
+ A74_tef_slaugther_title:0 "Entrée vers le Divenhal"
+ A74_tef_slaugther_desc:0 ""
+ A74_knocking_door_title:0 "Frapper à la porte"
+ A74_knocking_door_desc:0 ""
+ A74_greatest_prize_title:0 "Le plus grand butin"
+ A74_greatest_prize_desc:0 ""
+ A74_scourge_living_title:0 "L'ère de la piraterie"
+ A74_scourge_living_desc:0 ""
+ A74_pirate_divenhal_title:0 "Fédération pirate de Divenhal"
+ A74_pirate_divenhal_desc:0 ""
+ A74_rally_the_captains_title:0 "Rassembler les capitaines"
+ A74_rally_the_captains_desc:0 ""
+ A74_outpost_isle_title:0 "L'île avant-poste"
+ A74_outpost_isle_desc:0 ""
+ A74_natural_harbour_title:0 "Port naturel"
+ A74_natural_harbour_desc:0 ""
+ A74_shipyards_title:0 "Terre de chantiers navals"
+ A74_shipyards_desc:0 ""
+ A74_pitiful_pirates_title:0 "Les pauvres pirates"
+ A74_pitiful_pirates_desc:0 ""
+ A74_slaugther_elf_title:0 "Une île forteresse"
+ A74_slaugther_elf_desc:0 ""
+ A74_down_the_sorrow_title:0 "Vers le chagrin"
+ A74_down_the_sorrow_desc:0 ""
+ A74_great_heist_title:0 "Le grand casse"
+ A74_great_heist_desc:0 ""
+ A74_train_marines_title:0 "Entraîner les marins"
+ A74_train_marines_desc:0 ""
+ A74_dreadful_sailors_title:0 "Pilleurs professionnels"
+ A74_dreadful_sailors_desc:0 ""
+ A74_undead_butchers_title:0 "Dépouilleurs"
+ A74_undead_butchers_desc:0 ""
+ A74_terrorize_bulwari_title:0 "Terroriser les Bulwari"
+ A74_terrorize_bulwari_desc:0 ""
+ A74_teach_sail_title:0 "Pirates novices"
+ A74_teach_sail_desc:0 ""
+ A74_salt_hegemon_title:0 "Hégémon du sel"
+ A74_salt_hegemon_desc:0 ""
+ A74_lots_of_salt_title:0 "Beaucoup de sel"
+ A74_lots_of_salt_desc:0 ""
+ A74_shield_against_the_phoenix_title:0 "Bouclier contre le phénix"
+ A74_shield_against_the_phoenix_desc:0 ""
+ A74_businori_coast_title:0 "Côte businori"
+ A74_businori_coast_desc:0 ""
+ A74_the_tip_title:0 "La pointe"
+ A74_the_tip_desc:0 ""
+ A74_greybeard_title:0 "Capitaine Barbe-Grise"
+ A74_greybeard_desc:0 ""
+ A74_terrorize_cannorians_title:0 "Terroriser les Cannoriens"
+ A74_terrorize_cannorians_desc:0 ""
+#tooltip
+coastal_reclaimation_tooltip: "Chaque province de la zone §YCôte inondée§! à l'exception de §YNathalaire§! obtient le modificateur suivant :"
+restore_coast_tooltip: "Chaque province de la zone §YCôte inondée§! à l'exception de §YNathalaire§! gagne §G3§! points de chaque type de £adm£ £dip£ £mil£ §YDéveloppement§!."
+blood_bay_tooltip: "Toutes les §YProvinces côtières§! du nœud commercial §YBaie des Vins§! ont été §YPillées§!."
+blood_bay_tooltip2: "Toutes les §YProvinces côtières§! du nœud commercial §YBaie des Vins§! perdent §R5§! points aléatoires de £adm£ £dip£ £mil£ §YDéveloppement§! et gagnent §R100§! §YDévastation§!."
+blood_bay_tooltip3: "Tous les §YPays§! du nœud commercial §YBaie des Vins§! gagnent §R30§! §YExpansion agressive§! envers nous et §R-100§! §YOpinion§! à notre égard.\n"
+skin_the_bear_tooltip: "Libérer @Z10 §YRevrhavn§! en tant que §YVassal république pirate§!. Ils nous verseront un tribut tous les §Y10§! ans, dont le montant dépendra du nombre de côtes qu'ils auront pillées."
+pitiful_pirates_tooltip: "Libérer @F32 §YDrolakand§! en tant que §YVassal république pirate§!."
+pitiful_pirates_tooltip1: "Si nous avons un §YRéseau d'espionnage§! sur @U05 §YElizna§! et une §YMarine§! plus puissante que celle de @F32 §YDrolakand§!."
+pitiful_pirates_tooltip2: "Si @F32 §YDrolakand§! n'existe pas et que nous possédons la zone §YDrolas intérieur§!."
+only_one_tooltip: "Toutes les §YProvinces contrôlées§! gagnent §R100§! §YDévastation§! et §G-50%§! §YCoût en score de guerre provincial§!."
+biggest_city_tooltip: "Si §YBeepeck§! a §R100§! §YDévastation§! :"
+biggest_city_tooltip2: "Tous les §YPays§! de §Yl'EoA§! gagnent §R30§! §YExpansion agressive§! envers nous."
+prepare_fleet_tooltip: "Obtenez un nouveau vaisseau amiral §YLourd§! nommé §dLa Griffe de l'Ombre§! à §YNathalaire§!."
+tef_slaugther_tooltip: "Si §YEborthil§! a §R100§! §YDévastation§! :"
+greatest_prize_tooltip: "Tous les §YPays§! de §Yl'EoA§! gagnent §R30§! §YExpansion agressive§! envers nous et §R-100§! §YOpinion§! à notre égard.\n"
+scourge_living_tooltip: "Toutes les §YProvinces côtières§! de §YCannor§! et §YGerudia§! ont été §YPillées§!."
+great_heist_tooltip: "Tous les pays de §Yl'EoA§! gagnent §R30§! §YInflation§!.\n"
+divenhal_menance_tooltip: "Avoir pillé au moins §Y10§! fois. (§Y[Root.GetNumRaids]§!/§Y10§!)"
+scourge_living_tooltip2: "Avoir pillé au moins §Y50§! fois. (§Y[Root.GetNumRaids]§!/§Y50§!)"
+prove_oneself_tt: "Avoir pillé au moins §Y20§! fois. (§Y[Root.GetNumRaids]§!/§Y20§!)"
+A74_terrorize_bulwari_tooltip2: "Avoir remporté au moins §Y5§! guerres contre un §YPays§! de §YBulwar§!. (§Y[Root.BulwariWars]§!/§Y5§!)"
+teach_sail_tooltip: "Si @E00 §YBarbe-Grise§! est notre vassal :"
+divenhal_menance_tooltip2: "Le modificateur §YCrique au trésor§! est un modificateur améliorable en pillant des capitales et en raidissant des provinces côtières."
+scourge_living_tooltip3: "Obtenez une §YRevendication permanente§! sur toutes les §YÎles§! du monde !"
+prepare_fleet_tooltip2: "Obtenez une §YRevendication permanente§! sur toutes les §YÎles§! de la §YMer de Divenhal§!."
+prepare_fleet_tooltip3: "Obtenez une §YRevendication permanente§! sur tous les §YCentres de commerce§! §GCôtiers§! de §YBulwar§! et §YNord Salahad§!."
+terrorize_bulwari_tt: "Obtenez des §YRevendications permanentes§! sur tous les §GCentres de commerce§! des régions §YBahar§!, §YBulwar propre§! et §YCollines des Harpies§!\n"
+pirate_renowned_pirate_king_tt: "Gagner des guerres contre des pays plus développés que [Root.GetName] a désormais §G5%§! de chances d'octroyer à notre dirigeant le statut de §YPirate légendaire§!.\nLes §YPirates légendaires§! ne coûtent aucune Tradition républicaine pour être réélus."
+shadows_embrace_tooltip: "§GAméliorez§! la divinité §dNathalyne§ !"
+control_the_trade_tooltip: "§YL'esclavage§! ne sera plus aboli."
+knocking_door_tooltip: "Obtenez une §YRevendication permanente§! sur tous les §YCentres de commerce§! §GCôtiers§! et §YÎles§! de §YCannor§ !"
+imperial_dogs_tooltip: "Tous les §YPays côtiers§! de §Yl'EoA§! perdent §R1§! §YStabilité§! et leurs §YProvinces côtières§! obtiennent :"
+infernal_shield_tooltip: "Ce §YModificateur§! sera amélioré en fonction du §YDéveloppement total§! de @AC7 §YKryzzar§!, avec un maximum de §G200§! §YDéveloppement total§!."
+infernal_shield_tooltip2: "Aucun §YPays§! autre que nous ou nos §YSujets§! ne peut posséder de §YProvince§! dans la région §YFolies de Daravan§!."
+infernal_shield_tooltip3: "@AC7 §YKryzzar§! colonisera toute la région §YFolies de Daravan§!."
+green_trade_tooltip: "Nous débloquerons une version §GAméliorée§! de l'édit §YProtéger le commerce§!."
+A74_terrorize_bulwari_tooltip: "Toutes les §YProvinces côtières§! des régions §YBahar§!, §YBulwar propre§! et §YCollines des Harpies§! ont été §YPillées§!. Cela n'inclut pas les §YProvinces§! nous appartenant, à nos §YSujets§!, ou à des §YPays§! avec lesquels nous avons une §YTrêve§!."
+A74_salt_hegemon_tooltip: "§Y3§! provinces aléatoires de type §YMontagne§!, §YColline§! ou §YHautes terres§! seront transformées en §YSel§!."
+A74_salt_hegemon_tooltip2: "Toutes les provinces de §YSel§! que nous possédons obtiennent le modificateur §Ysuivant§! :"
+the_tip_tooltip: "Libérer @U08 §YEkha§! en tant que §YVassal république pirate§!. Nous conserverons §YBus-Akasur§!."
+A74_greybeard_tooltip1: "Si @F23 §YOvdal Tûngr§! n'existe pas."
+A74_greybeard_tooltip2: "Si nous avons un §YRéseau d'espionnage§! et une §YMarine§! plus puissante que celle de @F23 §YOvdal Tûngr§!."
+greybeard_tooltip3: "§YCapitaine Barbe-Grise§! provoquera un coup d'État à @F23 §YOvdal Tûngr§!. §RPréparez-vous !§!"
+A74_a_free_bulwar_tooltip: "Tous les §YPays§! de §YBulwar§! obtiennent le modificateur §Ysuivant§! :"
+pirate_divenhal_tooltip: "Tous nos futurs §YVassaux§! deviendront des §YRépubliques pirates§!."
+release_gnoll_tt: "Libérer @AC7 §YKryzzar§! en tant que Marche. Ils recevront toutes nos provinces de §YFolies de Daravan§! à l'exception de §YLa Côte inondée§!."
+deal_devil_tooltip: "Si nous améliorons nos relations avec @AC7 §YKryzzar§!."
+deal_devil_tooltip2: "Si @AC7 §YKryzzar§! n'existe pas et que nous possédons §Y4§! provinces dans la région §YFolies de Daravan§! à l'exception de §YLa Côte inondée§!."
+AC7_iron_ziggurat_tooltip2: "\nToutes les provinces de la zone §YWexhill§! verront leur bien commercial changé en §YFer§! et obtiennent le modificateur §Ysuivant§! :"
+dread_mutiny_tooltip: "Toutes les §YProvinces côtières§! de la région §YOurdia§! ont été §YPillées§!, nous §Yappartiennent§!, ou nous avons une §YTrêve§! avec leur propriétaire."
+dread_mutiny_tooltip3: "Toutes les §YProvinces côtières§! de la région §YFrontières§! ont été §YPillées§!, nous §Yappartiennent§!, ou nous avons une §YTrêve§! avec leur propriétaire."
+dread_mutiny_tooltip2: "Toutes les §YProvinces côtières§! de la région §YBusinor§! ont été §YPillées§!, nous §Yappartiennent§!, ou nous avons une §YTrêve§! avec leur propriétaire."
+#modifier tooltip
+seized_the_crown: "S'est emparé de la Couronne de Bera"
+#event
+flavor_Nathalaire.4.t: "Calos Rackthorne"
+flavor_Nathalaire.4.d: "Calos Rackthorne, pirate ambitieux et notoire de Nathalaire, a écumé la mer de Divenhal pendant des années, amassant une redoutable suite de pirates et de corsaires. Il proclame désormais que la république pirate de Nathalaire doit étendre son influence au-delà de la Côte inondée, visant à piller les rivages lointains de la mer de Divenhal et au-delà. Rackthorne jure de faire de Nathalaire la république pirate la plus redoutée d'Halann et affirme qu'il sera celui qui la mènera à cette position dominante."
+flavor_Nathalaire.4.a: "Rockthorne apportera l'ère de la piraterie à Cannor !"
+flavor_Nathalaire.5.t: "Half-orc de renom"
+flavor_Nathalaire.5.d: "L'esclavage est un pilier de l'économie de Nathalaire, où de nombreux orques sont réduits en servitude dans toute la ville. Cependant, après 10 ans de service, ces esclaves se voient offrir la liberté. L'un de leurs descendants, un demi-orc, s'est distingué en devenant un pirate puissant et redouté. Il a rassemblé une suite imposante d'orques et de demi-orcs, les ralliant à sa cause."
+flavor_Nathalaire.5.a: "Il nous mènera."
+flavor_Nathalaire.5.b: "Les mers le craindront."
+flavor_Nathalaire.5.c: "Lui et son équipage seront un atout précieux."
+#cb
+pirate_raid: "Raid pirate"
+pirate_raid_desc: "Il est temps de prendre ce que nous voulons aux faibles de ce monde."
+pirate_raid_war_goal: "Raid pirate"
+pirate_raid_war_goal_desc: "Nous sommes ici pour prendre ce que nous voulons, et nous ne nous arrêterons pas avant de l'avoir obtenu."
+PIRATE_RAID_WAR: "Raid pirate"
+#misc
+AC7_edict_protect_trade: "Protection du commerce améliorée"
+###VARIABLES
+NUM_OF_BULWARI_WARS_COUNTER: "[Root.A74warswon.GetValue]"
+NUM_OF_CAPITALS_PILLAGED_COUNTER: "[Root.PillagedCapitals.GetValue]"
+#modifiers
+treasure_cove1: "Crique au trésor"
+treasure_cove1_desc: "§TCe modificateur sera amélioré à chaque fois que nous pillerons une capitale (toutes les 5 fois) et que nous raidirons une province côtière (toutes les 10 fois)§!"
