--- a/3362815204/localisation/Flavour_Tretun_Z05_l_english.yml
+++ b/3362815204/localisation/Flavour_Tretun_Z05_l_english.yml
@@ -107,7 +107,7 @@ Z05_freemercs_tt: "§YMercenaries§! will not cost §GProfessionalism§! to hire
 Z05_merc_victories_tt: "Has the first 3 ideas in §YMercenary Ideas§!, get the following instead."
 Z05_finishing_the_job_tt: "\n 10 Random owned §RCorinite§! provinces will gain §G1§! £mil£ §YDevelopment§!."
 Z05_pious_nation_tt: "\n10 Random owned §RCorinite§! provinces will get their §YChurch§! building §GUpgraded§!."
-tretun_crusade_tt: "Gain §YSubjugation CB§! against §RRegent Court§! nations in §YLencenor§! under §Y150 Development§!."
+tretun_crusade_tt: "Gain §YSubjugation CB§! against §MRegent Court§! nations in §YLencenor§! under §Y150 Development§!."
 Z05_faithful_tt: "Every level of our §YTheologian§! advisor will grant us the following reward: \n§YDevelopment Cost:§! §G-2%§!\n"
 Z05_pious_nation_tt2: "Every province with a §YChurch§! building will gain §G1§! £adm£ §YDevelopment§!."
 Z05_safehaven_tt: "Unlock a §YDecision§! to move our capital to §YCorinhaven§!"
@@ -158,19 +158,25 @@ SISTER_1: "Sister"
 GRANDMISTRESS_1: "Grandmistress"
 SQUIRE: "Squire"
 
+BROTHERHOOD_1: "Brotherhood"
+CRUSADER_ORDER_2: "Crusader Order"
+HOLY_ORDER_3: "Holy Order"
+
 corinite_crusaders_reform: "Crusader Order"
+corinite_crusaders_reform_desc: "The Corinite Crusaders, a holy order dedicated to the protection and expansion of the Corinite faith."
+
 tretunic_monarchy: "Tretunic Militarization"
 tretunic_monarchy_desc: "Tretun, surrounded by hostile powers and plagued by its precarious position, has long relied on the strength of foreign mercenaries and adventurers to bolster its armies. Lacking the manpower to field large forces of its own, the Tretunic rulers turned to these outsiders, whose skill and loyalty were secured with gold rather than blood ties."
 
 getAdeanVictories: "Won 10 battles against §YRegent Court§! countries. (§Y[Root.getAdeanVictories]§!/§Y10§!)"
 
-merc_crusaders: "Corinite Crusaders"
+merc_crusaders: "§VCorinite Crusaders§!"
 unlock_merc_crusaders_tt: "Unlock the mercenary company §YCorinite Crusaders§! to recruit"
 
-merc_tretun_foreign_legion: "Tretunic Foreign Legion"
+merc_tretun_foreign_legion: "§VTretunic Foreign Legion§!"
 unlock_merc_tretun_foreign_legion_tt: "Unlock the mercenary company §YTretunic Foreign Legion§! to recruit"
 
-merc_bladeborn: "The Bladeborn"
+merc_bladeborn: "§VThe Bladeborn§!"
 unlock_merc_bladeborn_tt: "Unlock the mercenary company §YThe Bladeborn§! to recruit"
 
 Z05_move_capital_title: "Move Capital to Corinhaven"
