--- a/3362815204/localisation/Flavour_Tretun_Z05_l_french.yml
+++ b/3362815204/localisation/Flavour_Tretun_Z05_l_french.yml
@@ -107,7 +107,7 @@ Z05_freemercs_tt: "Les §YMercenaires§! ne coûteront pas de §GProfessionnalis
 Z05_merc_victories_tt: "Possède les 3 premières idées des §YIdées Mercenaires§!, obtenez les suivantes à la place."
 Z05_finishing_the_job_tt: "\n 10 provinces possédées §RCorinites§! aléatoires gagneront §G1§! £mil§ §YDéveloppement§!."
 Z05_pious_nation_tt: "\n10 provinces possédées §RCorinites§! aléatoires verront leur bâtiment d'§YÉglise§! §GAméliorer§!."
-tretun_crusade_tt: "Gagne le §YCB de Subjugation§! contre les nations de la §RCour du Régent§! en §YLencenor§! avec moins de §Y150 Développement§!."
+tretun_crusade_tt: "Gagne le §YCB de Subjugation§! contre les nations de la §MCour du Régent§! en §YLencenor§! avec moins de §Y150 Développement§!."
 Z05_faithful_tt: "Chaque niveau de notre conseiller §YThéologien§! nous accordera la récompense suivante : \n§YCoût de Développement :§! §G-2%§!\n"
 Z05_pious_nation_tt2: "Chaque province avec un bâtiment d'§YÉglise§! gagnera §G1§! £adm£ §YDéveloppement§!."
 Z05_safehaven_tt: "Débloque une §YDécision§! pour déplacer notre capitale à §YHavre-de-Corin§! !"
@@ -158,19 +158,25 @@ SISTER_1: "Sœur"
 GRANDMISTRESS_1: "Grande Maîtresse"
 SQUIRE: "Écuyer"
 
+BROTHERHOOD_1: "Confrérie"
+CRUSADER_ORDER_2: "Ordre des Croisés"
+HOLY_ORDER_3: "Ordre Sacré"
+
 corinite_crusaders_reform: "Ordre Croisé"
+corinite_crusaders_reform_desc: "Les Croisés corinites, un ordre sacré dédié à la protection et à l'expansion de la foi corinite."
+
 tretunic_monarchy: "Militarisation Trétunic"
 tretunic_monarchy_desc: "Tretun, encerclé par des puissances hostiles et rongé par sa position précaire, s'est longtemps appuyé sur la force de mercenaires étrangers et d'aventuriers pour renforcer ses armées. Manquant de main-d'œuvre pour déployer de grandes forces propres, les dirigeants trétunics se tournèrent vers ces étrangers, dont la compétence et la loyauté furent sécurisées par l'or plutôt que par les liens du sang."
 
 getAdeanVictories: "A gagné 10 batailles contre les pays de la §YCour du Régent§!. (§Y[Root.getAdeanVictories]§!/§Y10§!)"
 
-merc_crusaders: "Croisés Corinites"
+merc_crusaders: "§VCroisés Corinites§!"
 unlock_merc_crusaders_tt: "Débloque la compagnie mercenaire §YCroisés Corinites§! à recruter"
 
-merc_tretun_foreign_legion: "Légion Étrangère Trétunic"
+merc_tretun_foreign_legion: "§VLégion Étrangère Trétunic§!"
 unlock_merc_tretun_foreign_legion_tt: "Débloque la compagnie mercenaire §YLégion Étrangère Trétunic§! à recruter"
 
-merc_bladeborn: "Les Nés-de-l'Épée"
+merc_bladeborn: "§VLes Nés-de-l'Épée§!"
 unlock_merc_bladeborn_tt: "Débloque la compagnie mercenaire §YLes Nés-de-l'Épée§! à recruter"
 
 Z05_move_capital_title: "Déplacer la Capitale à Havre-de-Corin"
