--- a/3362815204/localisation/Flavour_Vaengheim_Z88_l_english.yml
+++ b/3362815204/localisation/Flavour_Vaengheim_Z88_l_english.yml
@@ -125,7 +125,89 @@
  Z88_to_last_all_time_title: "To Last All Time"
  Z88_to_last_all_time_desc: "“As Elkaesal found gentle dreams, did Vaengheim find her peace, and summer found Gerudia.”\n- From the Tale of Vaengheim\n\nWe have done what none thought possible, achieved that which was only the realm of dreams - Elkaesal sleeps again, and we think her happier for it. Work yet remains however, for the glories of the present may always fade with time. No one lives forever in body, as even dragons may die, and the works they do upon the earth may wither and fade. Such is as it will be, but if the fate of Gerudia is a future of frost it shall not be for lack of our effort. All will remember what we did here in these days, and the song of it will soothe Elkaesal til the end of time."
 
+#variable
+Z88warswon: "Amount of wars won"
 
+#modifiers
+vaengheim_thousands_wings: "Great March"
+vaengheim_dalr_military: "Taming the Bear"
+vaengheim_first_colonization: "Scouting the Frontier"
+vaengheim_frontiers: "Frontier Outposts"
+vaengheim_dalr_conquest: "Bear Tamed"
+vaengheim_renaissance: "Járnklorenessansen"
+vaengheim_gullmork_prospecting: "First Settlements"
+vaengheim_incense: "Oils and Candles"
+vaengheim_skald_council: "Skald Council"
+vaengheim_gullmork_mines: "Frost Wing Mines"
+vaengheim_konungrhavn_port: "Konungrhavn Staple Port"
+vaengheim_cot: "Expanding Trading Infrastructure"
+vaengheim_ships: "New Gerudian Fleet"
+vaengheim_estates: "Gerudian Unity"
+vaengheim_colonist: "Call of Aelantir"
+vaengheim_sunchaser_ships: "Chasing the Sun"
+vaengheim_peak_trade: "Control Over Aelantir Trade"
+vaengheim_crusade: "Northern Crusade"
+vaengheim_frontier_charters: "Frontier Charter Companies"
+vaengheim_taric_guys: "Oath Fulfilled"
+vaengheim_crown_of_ursidae: "Crown of Ursidae"
+vaengheim_frontier_modifier: "Our Second Home"
+vaengheim_everexpanding_markets: "Age of Iron"
+vaengheim_prosperous_ports: "Prospering Ports"
+vaengheim_skald_reward: "Skaldic Outreach"
+vaengheim_olavlund_modifier_1: "Gerudian Prosperity"
+vaengheim_olavlund_modifier_2: "Gerudian Glory"
+vaengheim_gov_reward_1: "From Shore to Shore"
+vaengheim_gov_reward_2: "From Shore to Shore"
+vaengheim_gov_reward_3: "From Shore to Shore"
+vaengheim_moorhills_reclaimed: "Moorhills Reclaimed"
+vaengheim_krakdhum_consolidation: "Consolidating Dwarovar"
+vaengheim_blue_reach_conversions: "Blue Reach Campaign"
+vaengheim_blue_reach_tolerance: "Reachmen Tolerated"
+estate_burghers_vaengheim_expansion_arctic: "Arctic Expansion"
+vaengheim_storm_isles_modifier: "Shield of Gerudia"
+vaengheim_ebonfrost_consorts: "Sapphire Court - Ebonfrosts"
+vaengheim_dalric_consorts: "Sapphire Court - Dalr"
+vaengheim_elven_consorts: "Sapphire Court - Elves"
+vaengheim_ebonmark_consorts: "Sapphire Court - White Reach"
+vaengheim_bluereach_consorts: "Sapphire Court - Blue Reach"
+vaengheim_orcish_consorts: "Sapphire Court - Orcs"
+vaengheim_dwarven_consorts: "Sapphire Court - Quartz Dwarves"
+vaengheim_emperor_buff: "Repelling Northern Invasion"
+vaengheim_balance_of_powers_1: "Supplying Ironsworn Nobility"
+vaengheim_balance_of_powers_2: "Hearthflames Burn Bright"
+vaengheim_balance_of_powers_3: "Hearthflames Burn Dim"
+
+#estates
+estate_ace_vaengheim_merchants_unlock: "Frossinfjodr"
+estate_ace_vaengheim_merchants_unlock_desc: "Frossinfjodr - 'frost wing' harpies are traders, settlers, and craftswomen who made their fortune operating in Gerudian Frontier. This emphasizes the respect for material wealth and economic power in the harpy culture. Frost Wing harpies often form their own subflocks which operate similarly to Cannorian guilds. Frost Wing harpies are often composed of harpies from all the different flocks of the Vængheimer Matriarchy and remain one of the only connections to the world beyond Gerudia, making them a very influential force in harpy politics."
+
+#government
+vaengheim_court: "The Sapphire Court"
+vaengheim_court_desc: "Sapphire Court — a form of government similar to other flocks of harpies all around the Halann. Supreme Matriarch is leading the country by balancing petty aspirations of groups of interests in Sapphire Court, drawing some closer and pushing others away depending on the situation."
+vaengheim_power_share: "Balance of Power"
+ability_ace_vaengheim_court_power_share: "Balance of Power"
+mechanic_enable_consort_mechanic_vaengheim_yes: "Gain access to the Sapphire Court consort mechanic."
+vaengheim_negative_modifier_tooltip: "At -100, §YBalance of Power§! has the following effects:\nMonthly War Exhaustion: §G-0.05§!\nCore-Creation Cost:  §G-10%§!\nGoods Produced Modifier: §R-10%§!\nYearly Army Professionalism: §G+0.5%§!"
+vaengheim_positive_modifier_tooltip: "At 100, §YBalance of Power§! has the following effects:\nGlobal Trade Power: §G+20%§!\nDiplomatic Reputation:  §G+2§!\nMonthly Autonomy Change: §R+0.10§!\nGoods Produced Modifier: §G+10%§!"
+
+#privileges
+estate_burghers_vaengheim_expansion_rt: "Remove the Development Cost Reduction from every eligible province."
+estate_burghers_vaengheim_expansion: "Fragrance Enterprise"
+estate_burghers_vaengheim_expansion_desc: "Gain following modifiers depending on the amount of §Yincense§! produced in your country:\n§S2 incense§! - §Gdevelopment cost reduction§! in §Yforest§! and §Ywoods§! terrain.\n§S4 incense§! - §Gdevelopment cost reduction§! in §Ymountains§!, §Yhills§! and §Yhighlands§! terrain.\n§S8 incense§! - increase chances of spawning §Yincense§! when colonizing provinces; §Gdevelopment cost reduction§! in arctic climate.\n§S10 incense§! - this privilege now gives additional §G-10% development cost reduction§!.\n§S15 incense§! - this privilege now gives additional §G+10% goods produced modifier§!.\n§S30 incense§! - this privilege now gives additional §G-5% dev cost modifier§!.\nAfter we complete the §SSelling Incense§! mission:\n§S45 incense§! - this privilege now gives additional §G+1 montly points§! of each £adm£ £dip£ £mil£ type.\n§S60 incense§! - this privilege now gives additional §G+10% administrative efficiency§!."
+
+#great project
+vaengheim_great_project: "Vængborg, the Impenetrable Roost"
+vaengheim_great_project_desc: "A symbol of growing control over the northern parts of Cannor, Vængborg stands firmly, seeming to never cease its expansion."
+vaengheim_tier3greatproject_tt: "All provinces in §YVængrheim§! Area will gain £icon_development_in_text£§G1§! random development"
+
+#rename
+JARNKLOGARDR: "Járnklogarðr"
+JARNKLOGARDR_ADJ: "Járnklogarðrar"
+
+#incident
+incident_vaengheim_gerudian_invasion: "Gerudian Hawks"
+incident_vaengheim_gerudian_invasion_member_alert: "After the consolidation of Gerudia and following collapse of Gawed rule in Alenic Frontier, the harpy matriarchy of Járnklogarðr seems to expand its borders even further, readying to force their way into Dameshead by cutting through northern imperial borders and conquering Vertesk. They have violated our northern frontiers and we must stop them at once for the Empire!"
+incident_vaengheim_gerudian_invasion_emperor_alert: "After the consolidation of Gerudia and following collapse of Gawed rule in Alenic Frontier, the harpy matriarchy of Járnklogarðr seems to expand its borders even further, readying to force their way into Dameshead by cutting through northern imperial borders and conquering Vertesk. They have violated our northern frontiers and we must stop them at once for the Empire!"
 
 #events
 vaengheim.100.t: "Passive tolerance gain"
@@ -457,6 +539,12 @@ vaengheim.160.a: "“Wingmaidens. We return to roost.”"
 vaengheim.161.t: "Yet She Wakes"
 vaengheim.161.d: "Now were many feasts made ready, and many celebrations were had, for the one-armed skald had warmed the heart of the bereaved dragonkin, and they were glad to rest under Vængheim’s wing. And all knew that now soon, summer would return, and Gerudia would suffer no longer.\n\nAnd summer did come, and it was mild and warm. And some did say that it was colder than most, but many thought these the words of old, bitter souls, who had a chill in their bones that no sun could touch.\n\nBut then winter came. And with winter came snow, and the snow fell in blankets thick, and it was said that the air danced with such chill, that even the Giant’s Grave froze solid, so that Olavlunder and Reachman needed neither ship nor fins to walk across it and visit the hearths of one another.\n\nAll of this greatly vexed [Root.Monarch.GetName], and the dragonkin assured them that it was not their songs that brought winter to their door. [Root.Monarch.GetName] called to their council many skalds, and the cold yet nipped at them, and lent them urgency.\n\n“Once now you have sung songs of ill omen unto me, and I have heard and hunted, and thought to make us safe. Yet she wakes.”\n\nAnd [Root.Monarch.GetName] gazed at each face in turn, and saw dread therein, and found it fair, for dreadful was this doom. Then they said.\n\n“There is aught else in my power, for the sky is my domain, and Elkaesal rests beyond my gaze, under the bones of this land. There is another way, though it is a dire one.”"
 vaengheim.161.a: "And [Root.Monarch.GetName] took leave of her council, to plan and make ready…"
+
+#war
+po_looming_harpy: "Triumph of the North"
+cb_flight_of_the_eagle_and_dove: "Flight of the Eagle and the Dove"
+FLIGHT_OF_HARPY_AND_DOVE_WAR_NAME: "Flight of the Eagle and the Dove"
+
 #tooltips
 z88_troll_troubles_ttt: "Alternatively if Orbtrol is §YSkaldhyrric§!, we will gain a §Gmassive§! tolerance boost of trolls and §G10k§! manpower."
 Z88_subject_dev_refund_tt: "Every §Y5§! years we may develop each of our subjects once for a §G50§! power refund of the appropriate type.\nThe cooldown on this effect is tracked via the §YOverlord Development§! opinion modifier on the §Ysubject§!."
