--- a/3362815204/localisation/Flavour_Wex_A30_EoA_l_english.yml
+++ b/3362815204/localisation/Flavour_Wex_A30_EoA_l_english.yml
@@ -458,6 +458,10 @@ A30_buy_folly_tooltip: "We will offer to buy the Folly marsh provinces at 50 ¤ 
 A30_fake_alternative_tooltip: "\n\n§TAlternatively:§!"
 A30_damerian_prosperity_tooltip: "\nAll provinces of the integrated vassals get:"
 A30_carneter_absent_tooltip: "§TIf Carneter doesn't yet exist§!"
+A30_upgrade_wexhills_heart_tooltip: "§YWexhills§! Area will have its §YTax Building§!, §YProduction Building§!, §YManpower Building§!, §YForcelimit Building§! and §YCourthouse Building§! upgraded\nIf no building is present, the §YBase Building§! is added, if the the highest tier building is present, then the province gains §YDevelopment§! instead"
+A30_pashainey_eoa_tooltip: "\nEvery country with a capital in the §YLuna River Basin§! Province Group converts to §YPashainéy§! culture"
+
+
 
 #trigger tooltips
 A30_lothane_is_dead_trigger_tooltip: "Lothane has died"
@@ -477,6 +481,9 @@ A30_throatport_capital_trigger_tooltip: "Throatport is or was the capital of Anb
 A30_gawed_owns_no_eoa_trigger_tooltip: "Owns no provinces in the Empire of Anbennar"
 A30_lencori_roilsardi_trigger_tooltip: "Roilsardi primary culture and in Lencenor Region"
 A30_second_imperial_arsenal_trigger_tooltip: "§TIf we have the largest navy in the world§!"
+A30_few_winebay_countries_tooltip: "Fewer than 3 countries exist with a capital in the §YLower Winebay§!, §YLower Bloodwine§!, §YUpper Winebay§! and §YEastern Winebay§! areas"
+A30_sway_winelords_trigger_tooltip: "All countries with capital in the §YLower Winebay§!, §YLower Bloodwine§! and §YUpper Winebay§! areas have Sent Gift Opinion and 100 Opinion toward us"
+
 
 #modifiers
 
