--- a/3362815204/localisation/Flavour_Wex_A30_EoA_l_french.yml
+++ b/3362815204/localisation/Flavour_Wex_A30_EoA_l_french.yml
@@ -458,6 +458,9 @@ A30_buy_folly_tooltip: "Nous offrirons d'acheter les provinces de marécage de l
 A30_fake_alternative_tooltip: "\n\n§TAlternativement :§!"
 A30_damerian_prosperity_tooltip: "\nToutes les provinces des vassaux intégrés obtiennent :"
 A30_carneter_absent_tooltip: "§TSi Carneter n'existe pas encore§!"
+A30_upgrade_wexhills_heart_tooltip: "La région de §YWexhills§! verra ses §Ybâtiments fiscaux§!, §Ybâtiments de production§!, §Ybâtiments de main-d'œuvre§!, §Ybâtiments de limite de force§! et §Ybâtiments de tribunal§! améliorés\nSi aucun bâtiment n'est présent, le §Ybâtiment de base§! est ajouté. Si le bâtiment du niveau le plus élevé est déjà présent, la province gagne à la place du §Ydéveloppement§!"
+A30_pashainey_eoa_tooltip: "\nTous les pays dont la capitale se trouve dans le §Ybassin de la rivière Luna§! voient leur culture se convertir en §YPashainéy§!"
+
 
 #trigger tooltips
 A30_lothane_is_dead_trigger_tooltip: "Lothane est mort"
@@ -477,6 +480,9 @@ A30_throatport_capital_trigger_tooltip: "Throatport est ou était la capitale d'
 A30_gawed_owns_no_eoa_trigger_tooltip: "Ne possède aucune province dans l'Empire d'Anbennar"
 A30_lencori_roilsardi_trigger_tooltip: "Culture primaire Roilsardi et dans la Région Lencenor"
 A30_second_imperial_arsenal_trigger_tooltip: "§TSi nous avons la plus grande marine du monde§!"
+A30_few_winebay_countries_tooltip: "Moins de 3 pays existent avec une capitale dans les régions §YBas-Winebay§!, §YBas-Bloodwine§!, §YHaut-Winebay§! et §YWinebay oriental§!"
+A30_sway_winelords_trigger_tooltip: "Tous les pays dont la capitale se trouve dans les régions §YBas-Winebay§!, §YBas-Bloodwine§! et §YHaut-Winebay§! ont reçu le modificateur d'opinion §YCadeau offert§! et une opinion de §Y100§! envers nous"
+
 
 #modifiers
 
